--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,6 +3,7 @@
     <head>
         {{- partial "head/head.html" . -}}
         {{- block "head" . -}}{{ end }}
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     </head>
     <body class="{{ block `body-class` . }}{{ end }}">
         {{- partial "head/colorScheme" . -}}
@@ -24,5 +25,20 @@
             </main>
         </div>
         {{ partial "footer/include.html" . }}
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        <script>
+          document.addEventListener('DOMContentLoaded', function() {
+            if (document.querySelector('.random-articles-swiper .swiper')) {
+              new Swiper('.random-articles-swiper .swiper', {
+                slidesPerView: 1,
+                spaceBetween: 0,
+                navigation: {
+                  nextEl: '.random-articles-swiper .swiper-next',
+                  prevEl: '.random-articles-swiper .swiper-prev',
+                },
+              });
+            }
+          });
+        </script>
     </body>
 </html>
