--- a/layouts/partials/sidebar/top.html
+++ b/layouts/partials/sidebar/top.html
@@ -70,5 +70,27 @@
                 </ol>
             {{- end -}}
         </nav>
+        <!-- Language Switcher -->
+        {{ if (compare.Gt .Site.Home.AllTranslations.Len 1) }}
+            {{ with .Site.Home.AllTranslations }}
+                <div id="i18n-switch">
+                    {{ partial "helper/icon" "language" }}
+                    <select name="language" title="language" onchange="window.location.href = this.selectedOptions[0].value">
+                        {{ $currentLanguageCode := $.Language.Lang }}
+                        {{ range . }}
+                            <option value="{{ .Permalink }}" {{ if eq .Language.Lang $currentLanguageCode }}selected{{ end }}>{{ .Language.LanguageName }}</option>
+                        {{ end }}
+                    </select>
+                </div>
+            {{ end }}
+        {{ end }}
+        <!-- Dark Mode Toggle -->
+        {{ if (default false .Site.Params.colorScheme.toggle) }}
+            <button id="dark-mode-toggle" aria-label="Toggle dark mode">
+                {{ partial "helper/icon" "toggle-left" }}
+                {{ partial "helper/icon" "toggle-right" }}
+                <span>{{ T "darkMode" }}</span>
+            </button>
+        {{ end }}
     </div>
 </header>
