--- a/assets/scss/partials/topbar.scss
+++ b/assets/scss/partials/topbar.scss
@@ -20,6 +20,10 @@
         gap: 1.5rem;
         min-height: 60px;
         width: 100%;
+
+        .flex-spacer {
+            flex: 1 1 auto;
+        }
     }
 
     .site-meta {
