--- a/layouts/partials/sidebar/top.html
+++ b/layouts/partials/sidebar/top.html
@@ -32,23 +32,7 @@
             <span class="site-name"><a href="{{ .Site.BaseURL | relLangURL }}">{{ .Site.Title }}</a></span>
             <span class="site-description">{{ .Site.Params.sidebar.subtitle }}</span>
         </div>
-        <nav class="topbar-menu">
-            <ol class="menu" id="main-menu">
-                {{ $currentPage := . }}
-                {{ range .Site.Menus.main }}
-                {{ $active := or (eq $currentPage.Title .Name) (or ($currentPage.HasMenuCurrent "main" .) ($currentPage.IsMenuCurrent "main" .)) }}
-                <li {{ if $active }} class='current' {{ end }}>
-                    <a href='{{ .URL }}' {{ if eq .Params.newTab true }}target="_blank"{{ end }}>
-                        {{ $icon := default .Pre .Params.Icon }}
-                        {{ with $icon }}
-                            {{ partial "helper/icon" . }}
-                        {{ end }}
-                        <span>{{- .Name -}}</span>
-                    </a>
-                </li>
-                {{ end }}
-            </ol>
-        </nav>
+        <div class="flex-spacer"></div>
         <nav class="topbar-social">
             {{- with .Site.Menus.social -}}
                 <ol class="menu-social">
@@ -69,6 +53,23 @@
                     {{ end }}
                 </ol>
             {{- end -}}
+        </nav>
+        <nav class="topbar-menu">
+            <ol class="menu" id="main-menu">
+                {{ $currentPage := . }}
+                {{ range .Site.Menus.main }}
+                {{ $active := or (eq $currentPage.Title .Name) (or ($currentPage.HasMenuCurrent "main" .) ($currentPage.IsMenuCurrent "main" .)) }}
+                <li {{ if $active }} class='current' {{ end }}>
+                    <a href='{{ .URL }}' {{ if eq .Params.newTab true }}target="_blank"{{ end }}>
+                        {{ $icon := default .Pre .Params.Icon }}
+                        {{ with $icon }}
+                            {{ partial "helper/icon" . }}
+                        {{ end }}
+                        <span>{{- .Name -}}</span>
+                    </a>
+                </li>
+                {{ end }}
+            </ol>
         </nav>
         <!-- Language Switcher -->
         {{ if (compare.Gt .Site.Home.AllTranslations.Len 1) }}
