--- a/assets/scss/partials/topbar.scss
+++ b/assets/scss/partials/topbar.scss
@@ -132,6 +132,14 @@
             display: none;
         }
     }
+
+    .topbar-toggles {
+        display: flex;
+        gap: 1rem;
+        @media (max-width: 767px) {
+            display: none;
+        }
+    }
 }
 
 [data-scheme="dark"] {
