--- a/layouts/partials/sidebar/top.html
+++ b/layouts/partials/sidebar/top.html
@@ -1,103 +1,121 @@
 <header class="topbar">
     <div class="topbar-inner">
-        <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="{{ T `toggleMenu` }}">
-            <span class="hamburger-box">
-                <span class="hamburger-inner"></span>
-            </span>
-        </button>
-        <div class="site-meta">
-            {{ with .Site.Params.sidebar.avatar }}
-                {{ if (default true .enabled) }}
-                <figure class="site-avatar">
-                    <a href="{{ .Site.BaseURL | relLangURL }}">
-                    {{ if not .local }}
-                        <img src="{{ .src }}" width="40" height="40" class="site-logo" loading="lazy" alt="Avatar">
-                    {{ else }}
-                        {{ $avatar := resources.Get (.src) }}
-                        {{ if $avatar }}
-                            {{ $avatarResized := $avatar.Resize "40x" }}
-                            <img src="{{ $avatarResized.RelPermalink }}" width="{{ $avatarResized.Width }}"
-                                height="{{ $avatarResized.Height }}" class="site-logo" loading="lazy" alt="Avatar">
+        <!-- Left column: Logo, Title, Description -->
+        <div class="topbar-left">
+            <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="{{ T `toggleMenu` }}">
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button>
+            <div class="site-meta">
+                {{ with .Site.Params.sidebar.avatar }}
+                    {{ if (default true .enabled) }}
+                    <figure class="site-avatar">
+                        <a href="{{ .Site.BaseURL | relLangURL }}">
+                        {{ if not .local }}
+                            <img src="{{ .src }}" width="40" height="40" class="site-logo" loading="lazy" alt="Avatar">
                         {{ else }}
-                            {{ errorf "Failed loading avatar from %q" . }}
+                            {{ $avatar := resources.Get (.src) }}
+                            {{ if $avatar }}
+                                {{ $avatarResized := $avatar.Resize "40x" }}
+                                <img src="{{ $avatarResized.RelPermalink }}" width="{{ $avatarResized.Width }}"
+                                    height="{{ $avatarResized.Height }}" class="site-logo" loading="lazy" alt="Avatar">
+                            {{ else }}
+                                {{ errorf "Failed loading avatar from %q" . }}
+                            {{ end }}
+                        {{ end }}
+                        </a>
+                        {{ with $.Site.Params.sidebar.emoji }}
+                            <span class="emoji">{{ . }}</span>
+                        {{ end }}
+                    </figure>
+                    {{ end }}
+                {{ end }}
+                <span class="site-name"><a href="{{ .Site.BaseURL | relLangURL }}">{{ .Site.Title }}</a></span>
+                <span class="site-description">{{ .Site.Params.sidebar.subtitle }}</span>
+            </div>
+        </div>
+        <!-- Right column: Menus, Social, Toggles -->
+        <div class="topbar-right">
+            <nav class="topbar-social">
+                {{- with .Site.Menus.social -}}
+                    <ol class="menu-social">
+                        {{ range . }}
+                            <li>
+                                <a 
+                                    href='{{ .URL }}'
+                                    {{ if eq (default true .Params.newTab) true }}target="_blank"{{ end }}
+                                    {{ with .Name }}title="{{ . }}"{{ end }}
+                                    rel="me"
+                                >
+                                    {{ $icon := default "link" .Params.Icon }}
+                                    {{ with $icon }}
+                                        {{ partial "helper/icon" . }}
+                                    {{ end }}
+                                </a>
+                            </li>
+                        {{ end }}
+                    </ol>
+                {{- end -}}
+            </nav>
+            <nav class="topbar-menu">
+                <ol class="menu" id="main-menu">
+                    {{ $currentPage := . }}
+                    {{ range .Site.Menus.main }}
+                    {{ $active := or (eq $currentPage.Title .Name) (or ($currentPage.HasMenuCurrent "main" .) ($currentPage.IsMenuCurrent "main" .)) }}
+                    <li {{ if $active }} class='current' {{ end }}>
+                        <a href='{{ .URL }}' {{ if eq .Params.newTab true }}target="_blank"{{ end }}>
+                            {{ $icon := default .Pre .Params.Icon }}
+                            {{ with $icon }}
+                                {{ partial "helper/icon" . }}
+                            {{ end }}
+                            <span>{{- .Name -}}</span>
+                        </a>
+                    </li>
+                    {{ end }}
+                    <!-- Language Switcher (inside menu for mobile) -->
+                    {{ if (compare.Gt .Site.Home.AllTranslations.Len 1) }}
+                        {{ with .Site.Home.AllTranslations }}
+                            <li id="i18n-switch">
+                                {{ partial "helper/icon" "language" }}
+                                <select name="language" title="language" onchange="window.location.href = this.selectedOptions[0].value">
+                                    {{ $currentLanguageCode := $.Language.Lang }}
+                                    {{ range . }}
+                                        <option value="{{ .Permalink }}" {{ if eq .Language.Lang $currentLanguageCode }}selected{{ end }}>{{ .Language.LanguageName }}</option>
+                                    {{ end }}
+                                </select>
+                            </li>
                         {{ end }}
                     {{ end }}
-                    </a>
-                    {{ with $.Site.Params.sidebar.emoji }}
-                        <span class="emoji">{{ . }}</span>
-                    {{ end }}
-                </figure>
-                {{ end }}
-            {{ end }}
-            <span class="site-name"><a href="{{ .Site.BaseURL | relLangURL }}">{{ .Site.Title }}</a></span>
-            <span class="site-description">{{ .Site.Params.sidebar.subtitle }}</span>
-        </div>
-        <div class="flex-spacer"></div>
-        <nav class="topbar-social">
-            {{- with .Site.Menus.social -}}
-                <ol class="menu-social">
-                    {{ range . }}
+                    <!-- Dark Mode Toggle (inside menu for mobile) -->
+                    {{ if (default false .Site.Params.colorScheme.toggle) }}
                         <li>
-                            <a 
-                                href='{{ .URL }}'
-                                {{ if eq (default true .Params.newTab) true }}target="_blank"{{ end }}
-                                {{ with .Name }}title="{{ . }}"{{ end }}
-                                rel="me"
-                            >
-                                {{ $icon := default "link" .Params.Icon }}
-                                {{ with $icon }}
-                                    {{ partial "helper/icon" . }}
-                                {{ end }}
-                            </a>
+                            <button id="dark-mode-toggle" aria-label="Toggle dark mode">
+                                {{ partial "helper/icon" "toggle-left" }}
+                                {{ partial "helper/icon" "toggle-right" }}
+                                <span>{{ T "darkMode" }}</span>
+                            </button>
                         </li>
                     {{ end }}
                 </ol>
-            {{- end -}}
-        </nav>
-    </div>
-    <nav class="topbar-menu">
-        <ol class="menu" id="main-menu">
-            {{ $currentPage := . }}
-            {{ range .Site.Menus.main }}
-            {{ $active := or (eq $currentPage.Title .Name) (or ($currentPage.HasMenuCurrent "main" .) ($currentPage.IsMenuCurrent "main" .)) }}
-            <li {{ if $active }} class='current' {{ end }}>
-                <a href='{{ .URL }}' {{ if eq .Params.newTab true }}target="_blank"{{ end }}>
-                    {{ $icon := default .Pre .Params.Icon }}
-                    {{ with $icon }}
-                        {{ partial "helper/icon" . }}
+            </nav>
+            <div class="topbar-toggles">
+                {{ if (compare.Gt .Site.Home.AllTranslations.Len 1) }}
+                    {{ with .Site.Home.AllTranslations }}
+                        <div id="i18n-switch">
+                            {{ partial "helper/icon" "language" }}
+                            <select name="language" title="language" onchange="window.location.href = this.selectedOptions[0].value">
+                                {{ $currentLanguageCode := $.Language.Lang }}
+                                {{ range . }}
+                                    <option value="{{ .Permalink }}" {{ if eq .Language.Lang $currentLanguageCode }}selected{{ end }}>{{ .Language.LanguageName }}</option>
+                                {{ end }}
+                            </select>
+                        </div>
                     {{ end }}
-                    <span>{{- .Name -}}</span>
-                </a>
-            </li>
-            {{ end }}
-        </ol>
-    </nav>
-    <div class="topbar-toggles">
-        <!-- Language Switcher and Dark Mode Toggle here -->
-        <!-- Language Switcher (inside menu for mobile) -->
-        {{ if (compare.Gt .Site.Home.AllTranslations.Len 1) }}
-            {{ with .Site.Home.AllTranslations }}
-                <div id="i18n-switch">
-                    {{ partial "helper/icon" "language" }}
-                    <select name="language" title="language" onchange="window.location.href = this.selectedOptions[0].value">
-                        {{ $currentLanguageCode := $.Language.Lang }}
-                        {{ range . }}
-                            <option value="{{ .Permalink }}" {{ if eq .Language.Lang $currentLanguageCode }}selected{{ end }}>{{ .Language.LanguageName }}</option>
-                        {{ end }}
-                    </select>
-                </div>
-            {{ end }}
-        {{ end }}
-
-        <!-- Dark Mode Toggle (inside menu for mobile) -->
-        {{ if (default false .Site.Params.colorScheme.toggle) }}
-            <div>
-                <button id="dark-mode-toggle" aria-label="Toggle dark mode">
-                    {{ partial "helper/icon" "toggle-left" }}
-                    {{ partial "helper/icon" "toggle-right" }}
-                    <span>{{ T "darkMode" }}</span>
-                </button>
+                {{ end }}
+                {{ if (default false .Site.Params.colorScheme.toggle) }}
+                {{ end }}
             </div>
-        {{ end }}
+        </div>
     </div>
 </header>
