--- a/assets/scss/partials/topbar.scss
+++ b/assets/scss/partials/topbar.scss
@@ -36,7 +36,11 @@
             display: flex;
             flex-direction: row; // Change to row
             align-items: center;
-            gap: 0.5rem;
+            gap: 0.75rem;
+
+            .topbar-social {
+                margin-left: 0.5rem;
+            }
 
             .site-avatar {
                 width: 40px;
