--- a/layouts/partials/sidebar/top.html
+++ b/layouts/partials/sidebar/top.html
@@ -1,12 +1,7 @@
 <header class="topbar">
     <div class="topbar-inner">
-        <!-- Left column: Logo, Title, Description -->
+        <!-- Left column: Logo, Title, Description, Social -->
         <div class="topbar-left">
-            <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="{{ T `toggleMenu` }}">
-                <span class="hamburger-box">
-                    <span class="hamburger-inner"></span>
-                </span>
-            </button>
             <div class="site-meta">
                 {{ with .Site.Params.sidebar.avatar }}
                     {{ if (default true .enabled) }}
@@ -56,48 +51,56 @@
                 </nav>
             </div>
         </div>
-        <!-- Right column: Search, Social, Language Switcher -->       
-            <nav class="topbar-menu">
-                <ol class="menu" id="main-menu">
-                    {{ $currentPage := . }}
-                    {{ range .Site.Menus.main }}
-                    {{ $active := or (eq $currentPage.Title .Name) (or ($currentPage.HasMenuCurrent "main" .) ($currentPage.IsMenuCurrent "main" .)) }}
-                    <li {{ if $active }} class='current' {{ end }}>
-                        <a href='{{ .URL }}' {{ if eq .Params.newTab true }}target="_blank"{{ end }}>
-                            {{ $icon := default .Pre .Params.Icon }}
-                            {{ with $icon }}
-                                {{ partial "helper/icon" . }}
+        <!-- Right column: Hamburger, Menus, Toggles -->
+        <div class="topbar-right">
+            <div class="topbar-menu-wrapper">
+                <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="{{ T `toggleMenu` }}">
+                    <span class="hamburger-box">
+                        <span class="hamburger-inner"></span>
+                    </span>
+                </button>
+                <nav class="topbar-menu">
+                    <ol class="menu" id="main-menu">
+                        {{ $currentPage := . }}
+                        {{ range .Site.Menus.main }}
+                        {{ $active := or (eq $currentPage.Title .Name) (or ($currentPage.HasMenuCurrent "main" .) ($currentPage.IsMenuCurrent "main" .)) }}
+                        <li {{ if $active }} class='current' {{ end }}>
+                            <a href='{{ .URL }}' {{ if eq .Params.newTab true }}target="_blank"{{ end }}>
+                                {{ $icon := default .Pre .Params.Icon }}
+                                {{ with $icon }}
+                                    {{ partial "helper/icon" . }}
+                                {{ end }}
+                                <span>{{- .Name -}}</span>
+                            </a>
+                        </li>
+                        {{ end }}
+                        <!-- Language Switcher (inside menu for mobile) -->
+                        {{ if (compare.Gt .Site.Home.AllTranslations.Len 1) }}
+                            {{ with .Site.Home.AllTranslations }}
+                                <li id="i18n-switch">
+                                    {{ partial "helper/icon" "language" }}
+                                    <select name="language" title="language" onchange="window.location.href = this.selectedOptions[0].value">
+                                        {{ $currentLanguageCode := $.Language.Lang }}
+                                        {{ range . }}
+                                            <option value="{{ .Permalink }}" {{ if eq .Language.Lang $currentLanguageCode }}selected{{ end }}>{{ .Language.LanguageName }}</option>
+                                        {{ end }}
+                                    </select>
+                                </li>
                             {{ end }}
-                            <span>{{- .Name -}}</span>
-                        </a>
-                    </li>
-                    {{ end }}
-                    <!-- Language Switcher (inside menu for mobile) -->
-                    {{ if (compare.Gt .Site.Home.AllTranslations.Len 1) }}
-                        {{ with .Site.Home.AllTranslations }}
-                            <li id="i18n-switch">
-                                {{ partial "helper/icon" "language" }}
-                                <select name="language" title="language" onchange="window.location.href = this.selectedOptions[0].value">
-                                    {{ $currentLanguageCode := $.Language.Lang }}
-                                    {{ range . }}
-                                        <option value="{{ .Permalink }}" {{ if eq .Language.Lang $currentLanguageCode }}selected{{ end }}>{{ .Language.LanguageName }}</option>
-                                    {{ end }}
-                                </select>
+                        {{ end }}
+                        <!-- Dark Mode Toggle (inside menu for mobile) -->
+                        {{ if (default false .Site.Params.colorScheme.toggle) }}
+                            <li>
+                                <button id="dark-mode-toggle" aria-label="Toggle dark mode">
+                                    {{ partial "helper/icon" "toggle-left" }}
+                                    {{ partial "helper/icon" "toggle-right" }}
+                                    <span>{{ T "darkMode" }}</span>
+                                </button>
                             </li>
                         {{ end }}
-                    {{ end }}
-                    <!-- Dark Mode Toggle (inside menu for mobile) -->
-                    {{ if (default false .Site.Params.colorScheme.toggle) }}
-                        <li>
-                            <button id="dark-mode-toggle" aria-label="Toggle dark mode">
-                                {{ partial "helper/icon" "toggle-left" }}
-                                {{ partial "helper/icon" "toggle-right" }}
-                                <span>{{ T "darkMode" }}</span>
-                            </button>
-                        </li>
-                    {{ end }}
-                </ol>
-            </nav>
+                    </ol>
+                </nav>
+            </div>
             <div class="topbar-toggles">
                 {{ if (compare.Gt .Site.Home.AllTranslations.Len 1) }}
                     {{ with .Site.Home.AllTranslations }}
@@ -111,8 +114,6 @@
                             </select>
                         </div>
                     {{ end }}
-                {{ end }}
-                {{ if (default false .Site.Params.colorScheme.toggle) }}
                 {{ end }}
             </div>
         </div>
