--- a/assets/scss/partials/menu.scss
+++ b/assets/scss/partials/menu.scss
@@ -266,11 +266,24 @@
 
 // Stack vertically on mobile
 @media (max-width: 767px) {
-    #main-menu,
-    .topbar-menu ol.menu {
-        flex-direction: column;
-        gap: 1rem;
-        align-items: flex-start;
-        width: 100%;
-    }
+  #main-menu,
+  .topbar-menu ol.menu {
+    position: fixed;
+    top: 60px;
+    left: 0;
+    right: 0;
+    width: 100vw;
+    max-width: 100vw;
+    min-width: 0;
+    border-radius: 0;
+    margin: 0;
+    padding-left: 0;
+    padding-right: 0;
+    box-sizing: border-box;
+    z-index: 999;
+    background: var(--card-background);
+    flex-direction: column;
+    gap: 1rem;
+    align-items: flex-start;
+  }
 }
