--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -1,6 +1,15 @@
 .container {
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 100px;
+    margin-right: 100px;
+
+    @media (max-width: 1200px) {
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+    @media (max-width: 767px) {
+        margin-left: 0;
+        margin-right: 0;
+    }
 
     .left-sidebar {
         order: -3;
