--- a/assets/scss/partials/menu.scss
+++ b/assets/scss/partials/menu.scss
@@ -7,7 +7,8 @@
  */
 
 .hamburger {
-    padding-top: 10px;
+    padding-top: 25px;
+    padding-right: 25px;
     display: inline-block;
     cursor: pointer;
     transition-property: opacity, filter;
@@ -131,7 +132,7 @@
     list-style: none;
     overflow-y: auto;
     flex-grow: 1;
-    font-size: 1.4rem;
+    font-size: 1.7rem;
     background-color: var(--card-background);
 
     box-shadow: var(--shadow-l1);
@@ -266,24 +267,24 @@
 
 // Stack vertically on mobile
 @media (max-width: 767px) {
-  #main-menu,
-  .topbar-menu ol.menu {
-    position: fixed;
-    top: 60px;
-    left: 0;
-    right: 0;
-    width: 100vw;
-    max-width: 100vw;
-    min-width: 0;
-    border-radius: 0;
-    margin: 0;
-    padding-left: 0;
-    padding-right: 0;
-    box-sizing: border-box;
-    z-index: 999;
-    background: var(--card-background);
-    flex-direction: column;
-    gap: 1rem;
-    align-items: flex-start;
-  }
+    #main-menu,
+    .topbar-menu ol.menu {
+        position: fixed;
+        top: 60px;
+        right: 0;
+        left: auto;
+        width: 100vw;
+        max-width: 100vw;
+        min-width: 0;
+        border-radius: 0;
+        margin: 0;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+        box-sizing: border-box;
+        z-index: 999;
+        background: var(--card-background);
+        flex-direction: column;
+        gap: 1rem;
+        align-items: flex-start;
+    }
 }
